--- a/po/stellarium/ru.po
+++ b/po/stellarium/ru.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-10 01:06+0700\n"
-"PO-Revision-Date: 2012-07-10 19:51+0000\n"
+"PO-Revision-Date: 2012-07-13 17:17+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-11 05:14+0000\n"
-"X-Generator: Launchpad (build 15593)\n"
+"X-Launchpad-Export-Date: 2012-07-14 05:15+0000\n"
+"X-Generator: Launchpad (build 15614)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -6222,7 +6222,7 @@ msgid ""
 "This plugin plots the position of stars with exoplanets. Exoplanets data is "
 "derived from the 'Extrasolar Planets Encyclopaedia' at exoplanet.eu"
 msgstr ""
-"Этот плагин отмечает месторасположение звёзд с экзопланетыми. Каталог "
+"Этот плагин отмечает месторасположение звёзд с экзопланетами. Каталог "
 "экзопланет основан на данных из \"Энциклопедии внесолнечных планет\" с "
 "exoplanet.eu"
 
@@ -6300,7 +6300,7 @@ msgid ""
 "This plugin plots the position of stars with exoplanets. Exoplanets data is "
 "derived from \"%1The Extrasolar Planets Encyclopaedia%2\""
 msgstr ""
-"Этот плагин отмечает месторасположение звёзд с экзопланетыми. Каталог "
+"Этот плагин отмечает месторасположение звёзд с экзопланетами. Каталог "
 "экзопланет основан на данных из \"%1Энциклопедии внесолнечных планет%2\""
 
 #. TRANSLATORS: The numbers contain the opening and closing tag of an HTML link
