Launchpad automatic translations update.

--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-10 01:06+0700\n"
-"PO-Revision-Date: 2012-07-08 22:14+0000\n"
+"PO-Revision-Date: 2012-07-14 21:09+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-10 05:30+0000\n"
-"X-Generator: Launchpad (build 15558)\n"
+"X-Launchpad-Export-Date: 2012-07-15 05:12+0000\n"
+"X-Generator: Launchpad (build 15614)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -5899,6 +5899,10 @@ msgid ""
 "can be seen %1here%2 (right scale in days), and this model is used for this "
 "plugin."
 msgstr ""
+"Este complemento implementa un simple modelado de curvas de luz para "
+"diferentes supernovas. Las vistas típicas de curvas de luz para las "
+"supernovas tipo I y tipo II pueden verse %1aquí%2 (escala derecha en días), "
+"y este modelo se utiliza para este complemento."
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:116
 msgid "Acknowledgments"
@@ -5934,6 +5938,8 @@ msgid ""
 "If you want to read full information about this plugin, its history and "
 "format of catalog, you can %1get info here%2."
 msgstr ""
+"Si quiere ver la información completa acerca de este complemento, su "
+"historia y su formato de catálogo, puede %1obtener información aquí%2."
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:161
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:156
