--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-10 01:06+0700\n"
-"PO-Revision-Date: 2012-07-05 13:59+0000\n"
-"Last-Translator: Vincent Sarrazy <v.sarrazy@gmail.com>\n"
+"PO-Revision-Date: 2012-07-14 09:58+0000\n"
+"Last-Translator: xemard.nicolas <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-10 05:25+0000\n"
-"X-Generator: Launchpad (build 15558)\n"
+"X-Launchpad-Export-Date: 2012-07-15 05:12+0000\n"
+"X-Generator: Launchpad (build 15614)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1142,11 +1142,11 @@ msgstr "Carte du ciel"
 
 #: src/gui/SearchDialog.cpp:351
 msgid "Simbad Lookup Error"
-msgstr ""
+msgstr "Erreur de la recherche Simbad"
 
 #: src/gui/SearchDialog.cpp:359
 msgid "Simbad Lookup"
-msgstr ""
+msgstr "Recherche Simbad"
 
 #: src/gui/SearchDialog.cpp:507
 msgid "University of Strasbourg (France)"
@@ -3678,7 +3678,7 @@ msgstr "Merci de sélectionner un objet avant de passer à la vue oculaire"
 
 #: plugins/Oculars/src/Oculars.cpp:838
 msgid "&Previous ocular"
-msgstr ""
+msgstr "&Oculaire précédent"
 
 #: plugins/Oculars/src/Oculars.cpp:839
 msgid "&Next ocular"
