--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-02 13:42+0700\n"
-"PO-Revision-Date: 2012-07-05 17:45+0000\n"
-"Last-Translator: Vincent Sarrazy <v.sarrazy@gmail.com>\n"
+"PO-Revision-Date: 2012-07-15 17:03+0000\n"
+"Last-Translator: ymadec <ymadec@linuxmail.org>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-06 04:37+0000\n"
-"X-Generator: Launchpad (build 15558)\n"
+"X-Launchpad-Export-Date: 2012-07-16 05:15+0000\n"
+"X-Generator: Launchpad (build 15614)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -665,7 +665,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:24
 msgid "The Pleiades"
-msgstr ""
+msgstr "La Pléïade"
 
 #: skycultures/arabic/star_names.fab:26
 msgid "One of the eggs"
