--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-10 01:06+0700\n"
-"PO-Revision-Date: 2012-07-09 18:56+0000\n"
+"PO-Revision-Date: 2012-07-15 18:58+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-10 05:28+0000\n"
-"X-Generator: Launchpad (build 15558)\n"
+"X-Launchpad-Export-Date: 2012-07-16 05:15+0000\n"
+"X-Generator: Launchpad (build 15614)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -5852,7 +5852,7 @@ msgstr ""
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:116
 msgid "Acknowledgments"
-msgstr "Anerkjennelser"
+msgstr "Anerkjennelse"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:117
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:121
@@ -5903,7 +5903,7 @@ msgstr "Innstilling for historiske supernovaer"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:234
 msgid "Historical Supernovae Plug-in Configuration"
-msgstr "Programtillegginnstilling for historiske supernovaer"
+msgstr "Innstilling av programtillegg for historiske supernovaer"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:236
 #: plugins/Quasars/src/ui_quasarsDialog.h:252
@@ -5979,7 +5979,7 @@ msgstr "Innstilling for kvasarer"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:250
 msgid "Quasars Plug-in Configuration"
-msgstr "Programtillegginnstilling for kvasarer"
+msgstr "Innstilling av programtillegg for kvasarer"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:258
 msgid "Display mode for quasars"
@@ -6177,7 +6177,7 @@ msgstr "Pulsarinnstilling"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:250
 msgid "Pulsars Plug-in Configuration"
-msgstr "Innstilling for pulsarprogramtillegg"
+msgstr "Innstilling av programtillegg for pulsarer"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:258
 msgid "Display mode for pulsars"
@@ -6295,7 +6295,7 @@ msgstr "Innstilling for eksoplaneter"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:234
 msgid "Exoplanets Plug-in Configuration"
-msgstr "Programtillegginnstilling for eksoplaneter"
+msgstr "Innstilling av programtillegg for eksoplaneter"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:236
 msgid "Update exoplanets data from Internet"
