--- a/po/stellarium/it.po
+++ b/po/stellarium/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-10 01:06+0700\n"
-"PO-Revision-Date: 2012-07-10 15:30+0000\n"
-"Last-Translator: Andrea Reguitti <lanzinimarina@alice.it>\n"
+"PO-Revision-Date: 2012-07-16 14:05+0000\n"
+"Last-Translator: ptia <Unknown>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-11 05:14+0000\n"
-"X-Generator: Launchpad (build 15593)\n"
+"X-Launchpad-Export-Date: 2012-07-17 04:47+0000\n"
+"X-Generator: Launchpad (build 15627)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -3096,7 +3096,7 @@ msgstr "Principali"
 
 #: src/ui_configurationDialog.h:804
 msgid "Display user settings information"
-msgstr ""
+msgstr "Visualizza le impostazioni."
 
 #: src/ui_configurationDialog.h:806
 msgid "Customized"
@@ -3975,7 +3975,7 @@ msgstr ""
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:462
 msgid "Opens the pop-up navigation menu."
-msgstr ""
+msgstr "Apri il menu di navigazione"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:871
 msgid "Enable only if an object is selected"
