--- a/po/stellarium/ky.po
+++ b/po/stellarium/ky.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-10 01:06+0700\n"
-"PO-Revision-Date: 2012-07-12 01:05+0000\n"
+"PO-Revision-Date: 2012-07-16 15:17+0000\n"
 "Last-Translator: chingis <chingis091@lavabit.com>\n"
 "Language-Team: Kirghiz <ky@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-13 04:45+0000\n"
-"X-Generator: Launchpad (build 15614)\n"
+"X-Launchpad-Export-Date: 2012-07-17 04:47+0000\n"
+"X-Generator: Launchpad (build 15627)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -101,7 +101,7 @@ msgstr "Планетарийлик жыбыраган калың жылдызы"
 
 #: src/core/modules/Nebula.cpp:318
 msgid "Cluster associated with nebulosity"
-msgstr "Небула менен бириккен чогулуш"
+msgstr "Жыбыраган калың жылдыз менен бириккен чогулуш"
 
 #: src/core/modules/Nebula.cpp:321
 msgid "Unknown"
