--- a/po/stellarium/be.po
+++ b/po/stellarium/be.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-17 14:31+0300\n"
-"PO-Revision-Date: 2012-07-14 17:44+0000\n"
+"PO-Revision-Date: 2012-07-18 19:28+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-18 05:14+0000\n"
+"X-Launchpad-Export-Date: 2012-07-19 04:35+0000\n"
 "X-Generator: Launchpad (build 15637)\n"
 "X-Poedit-Country: BELARUS\n"
 "Language: be\n"
@@ -864,7 +864,7 @@ msgstr "Дата й час"
 
 #: src/gui/StelGui.cpp:152
 msgid "Stop script execution"
-msgstr ""
+msgstr "Спыніць працу сцэнара"
 
 #: src/gui/StelGui.cpp:155
 msgid "Decrease time speed"
