--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+0.11.4 [in development]
+New tab in the configuration window to control the selected object information.
+
 0.11.3 [2012-05-18]
 Bug fix release.
 
