--- a/po/stellarium-skycultures/ky.po
+++ b/po/stellarium-skycultures/ky.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-17 14:31+0300\n"
-"PO-Revision-Date: 2012-07-21 17:19+0000\n"
-"Last-Translator: chingis <chingis091@lavabit.com>\n"
+"PO-Revision-Date: 2012-07-22 13:45+0000\n"
+"Last-Translator: xee2eim7 <q9mwvwxx@lavabit.com>\n"
 "Language-Team: Kirghiz <ky@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-22 04:44+0000\n"
+"X-Launchpad-Export-Date: 2012-07-23 05:16+0000\n"
 "X-Generator: Launchpad (build 15654)\n"
 
 #: nebulae/default/ngc2000names.dat:112
