--- a/po/stellarium-skycultures/it.po
+++ b/po/stellarium-skycultures/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-17 14:31+0300\n"
-"PO-Revision-Date: 2012-07-21 18:28+0000\n"
+"PO-Revision-Date: 2012-07-23 20:35+0000\n"
 "Last-Translator: Gianfranco Frisani <gfrisani@libero.it>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-22 04:44+0000\n"
-"X-Generator: Launchpad (build 15654)\n"
+"X-Launchpad-Export-Date: 2012-07-24 04:50+0000\n"
+"X-Generator: Launchpad (build 15668)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -787,7 +787,7 @@ msgstr "Centro del cielo"
 
 #: skycultures/arabic/star_names.fab:59
 msgid "The maidenhood"
-msgstr ""
+msgstr "La verginità"
 
 #: skycultures/arabic/star_names.fab:60
 msgid "The announcer of the northern Shinning one"
@@ -980,7 +980,7 @@ msgstr "Piede del centauro"
 
 #: skycultures/arabic/star_names.fab:107
 msgid "The loin-cloth"
-msgstr ""
+msgstr "Il perizoma"
 
 #: skycultures/arabic/star_names.fab:108
 msgid "The brighter Pherkad"
@@ -1060,7 +1060,7 @@ msgstr "Il precedente"
 
 #: skycultures/arabic/star_names.fab:127
 msgid "Head of the kneeling one"
-msgstr ""
+msgstr "La testa dell'inginocchiato"
 
 #: skycultures/arabic/star_names.fab:128
 msgid "Head of the dragon"
@@ -1068,7 +1068,7 @@ msgstr "Testa del drago"
 
 #: skycultures/arabic/star_names.fab:129
 msgid "The wrist of the kneeling one"
-msgstr ""
+msgstr "Il polso dell'inginocchiato"
 
 #: skycultures/arabic/star_names.fab:130
 msgid "The sting"
@@ -1084,7 +1084,7 @@ msgstr "La coda sollevata"
 
 #: skycultures/arabic/star_names.fab:133
 msgid "Head of the snake-charmer"
-msgstr ""
+msgstr "La testa dell'incantatore di serpenti"
 
 #: skycultures/arabic/star_names.fab:134
 msgid "Dog of the shepherd"
@@ -1180,11 +1180,11 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:158
 msgid "One of the sitting's"
-msgstr ""
+msgstr "Uno dei seduti"
 
 #: skycultures/arabic/star_names.fab:159
 msgid "Second one of the sitting's"
-msgstr ""
+msgstr "Secondo dei seduti"
 
 #: skycultures/arabic/star_names.fab:160
 msgid "Tail of the hen"
@@ -1304,7 +1304,7 @@ msgstr "Il quartiere"
 
 #: skycultures/arabic/star_names.fab:189
 msgid "The wronged"
-msgstr ""
+msgstr "Il torto"
 
 #: skycultures/arabic/star_names.fab:190
 msgid "Incoming ostriches"
@@ -1324,11 +1324,11 @@ msgstr "Quarta della cavalleria"
 
 #: skycultures/arabic/star_names.fab:194
 msgid "First shrike"
-msgstr ""
+msgstr "La prima averla"
 
 #: skycultures/arabic/star_names.fab:195
 msgid "Second shrike"
-msgstr ""
+msgstr "La seconda averla"
 
 #: skycultures/arabic/star_names.fab:196
 msgid "Fourth one of the sitting's"
@@ -1384,11 +1384,11 @@ msgstr "Seconda zampa del lupo"
 
 #: skycultures/arabic/star_names.fab:209
 msgid "Second one of the andiron's"
-msgstr ""
+msgstr "Secondo dell'alare"
 
 #: skycultures/arabic/star_names.fab:210
 msgid "Third one of the andiron's"
-msgstr ""
+msgstr "Terzo dell'alare"
 
 #: skycultures/arabic/star_names.fab:211
 msgid "The forth incantation"
@@ -2315,7 +2315,7 @@ msgstr "Stalliere"
 
 #: skycultures/korean/constellation_names.eng.fab:77
 msgid "Charioteer"
-msgstr ""
+msgstr "L'auriga"
 
 #: skycultures/korean/constellation_names.eng.fab:78
 msgid "Human"
